Add new entries to app home, extend EntryTeaser with tags.
